--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <!-- Browser Category -->
       <section class="home__container">
-        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__row"><h2 class="home__heading">Browse Categories</h2></div>
         <div class="home__cate row row-cols-3 row-cols-md-1">
           <!-- Category item 1 -->
           <div class="col">
@@ -100,7 +100,7 @@
           </button>
         </div>
 
-        <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3 gx-sm-4">
+        <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3">
           <!-- Product card 1 -->
           <div class="col">
             <div class="product-card">
@@ -108,8 +108,9 @@
                 <a href="#!">
                   <img src="./assets/img/product/item-1.png" alt="" class="product-card__thumb" />
                 </a>
-                <button class="like-btn like-btn--like product-card__like-btn">
+                <button class="like-btn product-card__like-btn">
                   <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
               <h3 class="product-card__title">
@@ -130,8 +131,9 @@
                 <a href="#!">
                   <img src="./assets/img/product/item-2.png" alt="" class="product-card__thumb" />
                 </a>
-                <button class="like-btn like-btn--like product-card__like-btn">
+                <button class="like-btn product-card__like-btn">
                   <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
               <h3 class="product-card__title">
@@ -152,8 +154,9 @@
                 <a href="#!">
                   <img src="./assets/img/product/item-3.png" alt="" class="product-card__thumb" />
                 </a>
-                <button class="like-btn like-btn--like product-card__like-btn">
+                <button class="like-btn like-btn--liked product-card__like-btn">
                   <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
               <h3 class="product-card__title">
@@ -174,8 +177,9 @@
                 <a href="#!">
                   <img src="./assets/img/product/item-4.png" alt="" class="product-card__thumb" />
                 </a>
-                <button class="like-btn like-btn--like product-card__like-btn">
+                <button class="like-btn product-card__like-btn">
                   <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
                 </button>
               </div>
               <h3 class="product-card__title">
