B61.40 - Tự làm phần Footer cho dự án 8- sửa chiều cao card không đều nhau

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       load("#header", "./templates/header.html");
     </script>
 
-    <div class="container home">
+    <!-- MAIN -->
+    <main class="container home">
       <!-- Slideshow -->
       <div class="home__container">
         <div class="slideshow">
@@ -291,12 +292,12 @@
           </div>
         </div>
       </section>
+    </main>
 
-      <!-- Footer -->
-      <footer id="footer"></footer>
-      <script>
-        load("#footer", "./templates/footer.html");
-      </script>
-    </div>
+    <!-- Footer -->
+    <footer id="footer" class="footer"></footer>
+    <script>
+      load("#footer", "./templates/footer.html");
+    </script>
   </body>
 </html>
