--- a/new-password.html
+++ b/new-password.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in | Grocery Mart</title>
+    <title>Create new password| Grocery Mart</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -27,8 +27,8 @@
     <main class="auth">
       <!-- Auth intro -->
       <div class="auth__intro d-md-none">
-        <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
-        <p class="auth__intro-text">The best of luxury brand values, high quality products, and innovative services</p>
+        <img src="./assets/img/auth/forgot-pasword.png" alt="" class="auth__intro-img" />
+        <!-- <p class="auth__intro-text">The best of luxury brand values, high quality products, and innovative services</p> -->
       </div>
       <!-- Auth content -->
       <div class="auth__content">
@@ -38,26 +38,17 @@
             <img src="./assets/icons/logo.svg" alt="" class="logo__img" />
             <h2 class="logo__title">Grocerymart</h2>
           </a>
-          <h1 class="auth__heading">Hello Again!</h1>
-          <p class="auth__desc">
-            Welcome back to sign in. As a returning customer, you have access to your previously saved all information.
-          </p>
-          <form action="./index-logined.html" class="form auth__form">
-            <div class="form__group">
-              <div class="form__text-input">
-                <input type="email" name="" id="" placeholder="Email" class="form__input" required />
-                <img src="./assets/icons/message.svg" alt="" class="form__input-icon" />
-                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
-              </div>
-              <p class="form__error">Email is not in correct format</p>
-            </div>
+          <h1 class="auth__heading">Create new password</h1>
+          <p class="auth__desc">At least 6 characters, with uppercase and lowercase letters</p>
+
+          <form action="./sign-in.html" class="form auth__form auth__form-forgot">
             <div class="form__group">
               <div class="form__text-input">
                 <input
                   type="password"
                   name=""
                   id=""
-                  placeholder="Password"
+                  placeholder="New password"
                   class="form__input"
                   required
                   minlenght="6"
@@ -67,27 +58,27 @@
               </div>
               <p class="form__error">Password must be at least 6 characters</p>
             </div>
-
-            <div class="form__group form__group--inline">
-              <label class="form__checkbox">
-                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
-                <span class="form__checkbox-label">Set as default card</span>
-              </label>
-              <a href="./reset-password.html" class="auth__link form__pull-right">Forgot password?</a>
+            <div class="form__group">
+              <div class="form__text-input">
+                <input
+                  type="password"
+                  name=""
+                  id=""
+                  placeholder="Confirm new password"
+                  class="form__input"
+                  required
+                  minlength="6"
+                />
+                <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
+                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+              </div>
+              <p class="form__error">Password must be at least 6 characters</p>
             </div>
+
             <div class="form__group auth__btn-group">
-              <button class="btn btn--primary auth__btn form__submit-btn">Sign In</button>
-              <button class="btn btn--outline auth__btn btn--no-margin">
-                <img src="./assets/icons/google.svg" alt="" class="btn__icon icon" />
-                Sign in width Google
-              </button>
+              <button class="btn btn--primary auth__btn form__submit-btn">Reset password</button>
             </div>
           </form>
-
-          <p class="auth__text">
-            Don’t have an account yet?
-            <a href="./sign-up.html" class="auth__link auth__text-link">Sign Up</a>
-          </p>
         </div>
       </div>
     </main>
