--- a/product-detail.html
+++ b/product-detail.html
@@ -32,6 +32,16 @@
     <!-- MAIN -->
     <main class="product-page">
       <div class="container">
+        <!-- Search bar -->
+        <div class="product-container">
+          <div class="search-bar d-none d-md-flex">
+            <input type="text" name="" id="" placeholder="Search for item" class="search-bar__input" />
+            <button class="search-bar__submit">
+              <img src="./assets/icons/search.svg" alt="" class="search-bar__icon icon" />
+            </button>
+          </div>
+        </div>
+
         <!-- Breadcrumbs -->
         <div class="product-container">
           <ul class="breadcrumbs">
