B61.60 - Làm phần nội dung bài viết #1

--- a/product-detail.html
+++ b/product-detail.html
@@ -178,16 +178,102 @@
         <div class="product-container">
           <div class="prod-tab">
             <ul class="prod-tab__list">
-              <li class="prod-tab__item">Description</li>
-              <li class="prod-tab__item">Features</li>
+              <li class="prod-tab__item prod-tab__item--current">Description</li>
               <li class="prod-tab__item">Review (1100)</li>
-              <li class="prod-tab__item prod-tab__item--current">Similar</li>
+              <li class="prod-tab__item">Similar</li>
             </ul>
             <div class="prod-tab__contents">
               <!-- Description -->
-              <div class="prod-tab__content">Content 1</div>
-              <!-- Features -->
-              <div class="prod-tab__content">Content 2</div>
+              <div class="prod-tab__content prod-tab__content--current">
+                <div class="row">
+                  <div class="col-8 offset-2">
+                    <div class="text-content">
+                      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                      <p>
+                        Lorem ipsum dolor <em>sit amet consectetur adipisicing elit</em>. Eum, cum quod tenetur tempore
+                        nostrum corrupti ducimus numquam quo.<a href="#!"> Quidem omnis voluptatibus</a> fugit
+                        blanditiis natus eveniet earum dolore vero porro nostrum.
+                      </p>
+                      <h3>Quidem omnis voluptatibus fugit</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. <b>Quidem omnis</b> voluptatibus fugit blanditiis natus eveniet
+                        earum dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        <img src="./assets/img/product/img-content.jpg" alt="" />
+                        <em>Velit dolorum ducimus quis veritatis</em>
+                      </p>
+                      <blockquote>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+                          <a href="#!">cum quod tenetur tempore</a> nostrum corrupti ducimus numquam quo. Quidem omnis
+                          voluptatibus fugit blanditiis natus eveniet earum dolore vero porro nostrum.
+                        </p>
+                      </blockquote>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <h3>Omnis voluptatibus fugit</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+
+                      <hr />
+
+                      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        <img src="./assets/img/product/item-2.png" alt="" />
+                        <em>Velit dolorum ducimus quis veritatis</em>
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        <img src="./assets/img/product/item-3.png" alt="" />
+                        <em>Velit dolorum ducimus quis veritatis</em>
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cum quod tenetur tempore nostrum
+                        corrupti ducimus numquam quo. Quidem omnis voluptatibus fugit blanditiis natus eveniet earum
+                        dolore vero porro nostrum.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- Review -->
               <div class="prod-tab__content">
                 <div class="prod-content">
@@ -258,7 +344,7 @@
                 </div>
               </div>
               <!-- Similar -->
-              <div class="prod-tab__content prod-tab__content--current">
+              <div class="prod-tab__content">
                 <div class="prod-content">
                   <h2 class="prod-content__heading">Similar items you might like</h2>
                   <div class="row row-cols-6 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-3">
