--- a/product-detail.html
+++ b/product-detail.html
@@ -186,8 +186,8 @@
               <!-- Description -->
               <div class="prod-tab__content prod-tab__content--current">
                 <div class="row">
-                  <div class="col-8 offset-2 col-xl-10 offset-xl-1 col-lg-12 offset-lg-0">
-                    <div class="text-content">
+                  <div class="col-8 col-xl-10 col-lg-12">
+                    <div class="text-content prod-tab__text-content">
                       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
                       <p>
                         Lorem ipsum dolor <em>sit amet consectetur adipisicing elit</em>. Eum, cum quod tenetur tempore
@@ -353,7 +353,7 @@
               <div class="prod-tab__content">
                 <div class="prod-content">
                   <h2 class="prod-content__heading">Similar items you might like</h2>
-                  <div class="row row-cols-6 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-3">
+                  <div class="row row-cols-6 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-2">
                     <!-- Product card 1 -->
                     <div class="col">
                       <article class="product-card">
